--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2997,40 +2997,33 @@ footer .footer_bottom p {
   }
 }
 
-.hm1_content .video_play {
-  margin-bottom: 35px;
+.slider_contain{
+  top: 0%;
+  left: 0%;
+  width: 50%;
+  height: 100%;
+  background:linear-gradient(to right, rgba(255, 255, 255, 0.495) , rgba(255, 255, 255, 0) 100%);
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  padding-left: 50px;
 }
 
-.hm1_content .video_play a {
-  width: 65px;
-  height: 65px;
-  color: white;
-  position: relative;
-  z-index: 1;
-  -webkit-animation: blood3 2.2s infinite;
-  animation: blood3 2.2s infinite;
-}
-
-.hm1_content .video_play a i {
-  font-size: 20px;
-}
-
-.hm1_content .video_play h6 {
-  font-weight: 600;
-  margin-left: 15px;
-}
 
 .hm1_content h3 {
   color: var(--primary-color);
-  margin-bottom: 40px;
+  margin-bottom: 20px;
   font-weight: 700;
+  font-size: 40px;
 }
 
 .hm1_content h1 {
+  font-size: 17px;
   width: 630px;
   max-width: 100%;
   margin-bottom: 45px;
-  font-weight: 700;
+  font-weight: 400;
+  line-height: 27px;
 }
 
 @-webkit-keyframes blood3 {
@@ -3311,6 +3304,7 @@ footer .footer_bottom p {
 }
 
 .register .register_content h4 {
+  font-size: 26px;
   color: white;
   font-weight: 600;
   margin-bottom: 20px;
@@ -3407,6 +3401,7 @@ footer .footer_bottom p {
 
 .hm1_counter {
   background: url("../images/count.jpg") no-repeat;
+  background-attachment: fixed;
   background-size: cover;
   position: relative;
   background-position: center;
@@ -3421,7 +3416,8 @@ footer .footer_bottom p {
   position: absolute;
   width: 100%;
   height: 100%;
-  background: url("../images/count1.png") no-repeat;
+  background-color: rgba(0, 0, 0, 0.671);
+  /* background: url("../images/count1.png") no-repeat; */
   background-size: cover;
   top: 0;
   left: 0;
