--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2612,6 +2612,9 @@ footer .footer_bottom p {
 .hm1_contact_form select:focus {
   border: 1px solid var(--primary-color);
 }
+textarea{
+  resize: none;
+}
 
 .hm1_contact_form textarea {
   border-radius: 0;
@@ -3600,7 +3603,20 @@ footer .footer_bottom p {
 .call_now .call_content ul li a:hover {
   color: var(--primary-color);
 }
-
+.three-line-ellipsis {
+  display: -webkit-box;
+  -webkit-line-clamp: 3;
+  -webkit-box-orient: vertical;
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
+.one-line-ellipsis {
+  display: -webkit-box;
+  -webkit-line-clamp: 1;
+  -webkit-box-orient: vertical;
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
 .campaign_slier_item {
   background: var(--white);
   -webkit-box-shadow: 0px 0px 14px #0000001c;
@@ -4605,7 +4621,27 @@ footer .footer_bottom p {
   -o-transition: var(--transition);
   transition: var(--transition);
 }
-
+.social_icon > a{
+  color: white;
+  background-color: var(--primary-color);
+  width: 40px;
+  height: 40px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border-radius: 50%;
+  -webkit-border-radius: 50%;
+  -moz-border-radius: 50%;
+  -ms-border-radius: 50%;
+  -o-border-radius: 50%;
+  margin-right: 15px;
+  -webkit-transition: 0.4s;
+  -o-transition: 0.4s;
+  transition: 0.4s;
+  &:hover{
+    background-color: var(--secondary-colors);
+  }
+}
 .footer_top2 {
   background: url("../images/h2_f_bg.jpg") no-repeat !important;
   background-size: cover !important;
@@ -5080,8 +5116,15 @@ footer .footer_bottom p {
 
 /**********************km__form__content***************************/
 .km__form__content {
+  width: 100%;
+  height: 100%;
   padding: 50px 30px;
   background: var(--primary-color);
+  background: url("../images/contactimage.jpg") no-repeat;
+  background-size: cover;
+  background-position: center;
+  position: relative;
+  z-index: 1;
 }
 
 .sub__title {
