--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -3021,7 +3021,9 @@ textarea{
   left: 0%;
   width: 50%;
   height: 100%;
-  background:linear-gradient(to right, rgba(255, 255, 255, 0.495) , rgba(255, 255, 255, 0) 100%);
+  /* background:linear-gradient(to right, rgb(255, 255, 255) , rgba(255, 255, 255, 0) 100%); */
+  z-index: 1;
+  background-color: #cccccc5a;
   display: flex;
   justify-content: center;
   flex-direction: column;
@@ -4183,8 +4185,11 @@ textarea{
   background: var(--white);
   padding-bottom: 30px;
 }
-
+.star h3{
+  font-size: 25px;
+}
 .testi_slider .testi_slider_item .testi_content {
+  height: 100%;
   background: white;
   -webkit-box-shadow: 0px 0px 13px #dddddd8c;
   box-shadow: 0px 0px 13px #dddddd8c;
