--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -3021,9 +3021,9 @@ textarea{
   left: 0%;
   width: 50%;
   height: 100%;
-  /* background:linear-gradient(to right, rgb(255, 255, 255) , rgba(255, 255, 255, 0) 100%); */
+  background:linear-gradient(to right, rgb(255, 255, 255) , rgba(255, 255, 255, 0) 100%);
   z-index: 1;
-  background-color: #cccccc5a;
+  /* background-color: #cccccc5a; */
   display: flex;
   justify-content: center;
   flex-direction: column;
